--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@ feature_row1:
     image_path: /assets/presentations/voxxed-lu-2019/voxxed-lux-2019-falguiere/voxxed-lux-2019-falguiere.001.png
     btn_label: "Lire"
     btn_class: "btn--info"
+  - url: /blog/pres-voxxed/
+    image_path: /assets/images/header.svg
+    btn_label: "Lire"
+    btn_class: "btn--info"
 
 
 ---
