--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@ layout: splash
 author_profile: false
 classes: wide
 header:
-  overlay_image: /assets/images/banner-1200-300.png
-#  overlay_filter: rgba(119,51,221, 0.1) # same as adding an opacity of 0.5 to a black background
-# overlay_filter: rgba(151,51,221, 0.05) # same as adding an opacity of 0.5 to a black background
-  overlay_filter: rgba(130,51,255, 0.1) # same as adding an opacity of 0.5 to a black background
-  caption: "Photo credit: Claude Falguière"
+  overlay_image: /assets/images/header.svg
+  #overlay_image: /assets/images/banner-1200-300.png
   actions:
     - label: "Lire le blog"
       url: /blog/
@@ -21,7 +18,11 @@ feature_row1:
     btn_label: "Lire"
     btn_class: "btn--info"
   - url: /blog/pres-voxxed/
-    image_path: /assets/images/header.svg
+    image_path: /assets/images/scene1.svg
+    btn_label: "Lire"
+    btn_class: "btn--info"
+  - url: /blog/pres-voxxed/
+    image_path: /assets/images/scene2.svg
     btn_label: "Lire"
     btn_class: "btn--info"
 
