--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: splash
 author_profile: false
 classes: wide
 header:
-  overlay_image: /assets/images/header.svg
+  overlay_image: /assets/images/banner-1600-800.svg
   #overlay_image: /assets/images/banner-1200-300.png
   actions:
     - label: "Lire le blog"
@@ -19,12 +19,12 @@ feature_row1:
     btn_class: "btn--info"
   - url: /blog/pres-voxxed/
     image_path: /assets/images/scene1.svg
-    btn_label: "Lire"
-    btn_class: "btn--info"
   - url: /blog/pres-voxxed/
     image_path: /assets/images/scene2.svg
-    btn_label: "Lire"
-    btn_class: "btn--info"
+  - url: /blog/pres-voxxed/
+    image_path: /assets/images/scene3.svg
+  - url: /blog/pres-voxxed/
+    image_path: /assets/images/scene4.svg
 
 
 ---
