--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: splash
 author_profile: false
 classes: wide
 header:
-  overlay_image: /assets/images/banner-1600-800.svg
+  image: /assets/images/banner-1600-800.svg
   #overlay_image: /assets/images/banner-1200-300.png
   actions:
     - label: "Lire le blog"
