--- a/index.html
+++ b/index.html
@@ -2,31 +2,8 @@
 layout: splash
 author_profile: false
 classes: wide
-header:
-  image: /assets/images/banner-1600-800.svg
-  #overlay_image: /assets/images/banner-1200-300.png
-  actions:
-    - label: "Lire le blog"
-      url: /blog/
+banner: /assets/images/banner-1200-440.svg
 page_assets: /assets/images/landpage/
-home_gallery:
-  - url: /blog/
-    image_path: /assets/presentations/voxxed-lu-2019/voxxed-lux-2019-falguiere/voxxed-lux-2019-falguiere.001.png
-feature_row1:
-  - url: /blog/pres-voxxed/
-    image_path: /assets/presentations/voxxed-lu-2019/voxxed-lux-2019-falguiere/voxxed-lux-2019-falguiere.001.png
-    btn_label: "Lire"
-    btn_class: "btn--info"
-  - url: /blog/pres-voxxed/
-    image_path: /assets/images/scene1.svg
-  - url: /blog/pres-voxxed/
-    image_path: /assets/images/scene2.svg
-  - url: /blog/pres-voxxed/
-    image_path: /assets/images/scene3.svg
-  - url: /blog/pres-voxxed/
-    image_path: /assets/images/scene4.svg
-
-
 ---
 
 
@@ -47,4 +24,17 @@ feature_row1:
 {% include gallery id="home_gallery"  %}
 -->
 
-{% include feature_row id="feature_row1" type="center" %}
+<!-- FIXME -->
+<div style="background-color: ffffff;">
+{% for item in site.data.navigation.landpage %}
+    <a href="{{site.baseurl}}{{item.url}}" style="color:#eaeaea;">
+      <!--
+      <div style="background-color: #1c488c;height:299px;width:595px;margin: 0 10px 10px 0;padding:10px;float:left;">
+        <span style="font-size:1.5em;font-family: 'Dancing Script', cursive;font-weight: bold;">Actualités</span>
+      </div>
+      -->
+        <img style="width:100%;object-fit: contain;margin: 0"
+             src="{{site.baseurl}}{{page.page_assets}}{{item.image}}"/>
+    </a>
+{% endfor %}
+</div>
