--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: splash
 author_profile: false
 classes: wide
-banner: /assets/images/banner-1200-440.svg
+header:
+  image: /assets/images/banner-1200-440.svg
 page_assets: /assets/images/landpage/
 ---
 
@@ -33,7 +34,7 @@ page_assets: /assets/images/landpage/
         <span style="font-size:1.5em;font-family: 'Dancing Script', cursive;font-weight: bold;">Actualités</span>
       </div>
       -->
-        <img style="width:100%;object-fit: contain;margin: 0"
+        <img style="width:100%;height:{{item.height}};object-fit: contain;margin: 0"
              src="{{site.baseurl}}{{page.page_assets}}{{item.image}}"/>
     </a>
 {% endfor %}
