--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ page_assets: /assets/images/landpage/
 <!-- FIXME -->
 <div style="background-color: ffffff;">
 {% for item in site.data.navigation.landpage %}
+    <img style="width:100%;height:{{item.height}};object-fit: contain;margin: 0"
+     src="{{site.baseurl}}{{page.page_assets}}{{item.image}}"/>
     <a href="{{site.baseurl}}{{item.url}}" style="color:#eaeaea;">
       <!--
       <div style="background-color: #1c488c;height:299px;width:595px;margin: 0 10px 10px 0;padding:10px;float:left;">
@@ -35,7 +37,7 @@ page_assets: /assets/images/landpage/
       </div>
       -->
         <img style="width:100%;height:{{item.height}};object-fit: contain;margin: 0"
-             src="{{site.baseurl}}{{page.page_assets}}{{item.image}}"/>
+             src="{{site.baseurl}}{{page.page_assets}}{{item.button}}"/>
     </a>
 {% endfor %}
 </div>
