--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ page_assets: /assets/images/landpage/
         <span style="font-size:1.5em;font-family: 'Dancing Script', cursive;font-weight: bold;">Actualités</span>
       </div>
       -->
-        <img style="width:100%;height:{{item.height}};object-fit: contain;margin: 0"
+        <img style="width:204;height:48;object-fit: contain;margin: 0"
              src="{{site.baseurl}}{{page.page_assets}}{{item.button}}"/>
     </a>
 {% endfor %}
