--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ page_assets: /assets/images/landpage/
    <div id="bubbles">
      <img style="width:100%;height:{{item.height}};object-fit: contain;margin: 0"
      src="{{site.baseurl}}{{page.page_assets}}{{item.image}}"/>
+     <div style="position:fixed;top:10%;left:50%" id="text-overlay">
+       <p>sample text</p>
+    </div>
      <div style="position:fixed;top:50%;left:50%" id="button-overlay">
        <a href="{{site.baseurl}}{{item.url}}" style="color:#eaeaea;">
       <!--
