--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ page_assets: /assets/images/landpage/
      src="{{site.baseurl}}{{page.page_assets}}{{item.image}}"/>
      <div style="position:absolute;z-index:8;top:{{item.text-top-offset}};left:{{item.text-left-offset}}"
           id="text-overlay">
-       <p>{{item.text}}</p> 
+       <p style="font-size:0.5em">{{item.text}}</p> 
      </div>
      <div style="position:absolute;z-index:9;top:50%;left:50%" id="button-overlay">
        <a href="{{site.baseurl}}{{item.url}}" style="color:#eaeaea;">
