--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ page_assets: /assets/images/landpage/
      src="{{site.baseurl}}{{page.page_assets}}{{item.image}}"/>
      <div style="position:absolute;z-index:8;top:{{item.text-top-offset}};left:{{item.text-left-offset}}"
           id="text-overlay">
-       <p style="font-size:0.5em">{{item.text}}</p> 
+       <p style="font-size:0.7em">{{item.text}}</p>
      </div>
-     <div style="position:absolute;z-index:9;top:50%;left:50%" id="button-overlay">
+     <div style="position:absolute;z-index:9;top:{{item.button-top-offset}};left:{{item.button-left-offset}}" id="button-overlay">
        <a href="{{site.baseurl}}{{item.url}}" style="color:#eaeaea;">
       <!--
       <div style="background-color: #1c488c;height:299px;width:595px;margin: 0 10px 10px 0;padding:10px;float:left;">
@@ -43,7 +43,7 @@ page_assets: /assets/images/landpage/
       </div>
       -->
 
-        <img style="width:50%;object-fit: contain;margin: 0"
+        <img style="width:102;object-fit: contain;margin: 0"
              src="{{site.baseurl}}{{page.page_assets}}{{item.button}}"/>
       </a>
     </div>
