--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ page_assets: /assets/images/landpage/
           id="text-overlay">
        <p style="font-size:0.7em">{{item.text}}</p>
      </div>
-     <div style="position:absolute;z-index:9;top:{{item.button-top-offset}};left:{{item.button-left-offset}}" id="button-overlay">
+     <div style="position:absolute;z-index:9;top:{{item.button-top-offset}};left:{{item.button-left-offset}}"
+          id="button-overlay">
        <a href="{{site.baseurl}}{{item.url}}" style="color:#eaeaea;">
       <!--
       <div style="background-color: #1c488c;height:299px;width:595px;margin: 0 10px 10px 0;padding:10px;float:left;">
