--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ page_assets: /assets/images/landpage/
    <div style="position:relative" id="bubbles">
      <img style="width:100%;height:{{item.height}};object-fit: contain;margin: 0"
      src="{{site.baseurl}}{{page.page_assets}}{{item.image}}"/>
-     <div style="position:absolute;z-index:8;top:{{item.text-top-offset}};left:{{item.text-left-offset}}"
+     <div style="position:absolute;z-index:8;width:40%;top:{{item.text-top-offset}};left:{{item.text-left-offset}}"
           id="text-overlay">
        <p style="font-size:0.7em">{{item.text}}</p>
      </div>
-     <div style="position:absolute;z-index:9;top:{{item.button-top-offset}};left:{{item.button-left-offset}}"
+     <div style="position:absolute;z-index:9;width:40%;top:{{item.button-top-offset}};left:{{item.button-left-offset}}"
           id="button-overlay">
        <a href="{{site.baseurl}}{{item.url}}" style="color:#eaeaea;">
       <!--
@@ -44,7 +44,7 @@ page_assets: /assets/images/landpage/
       </div>
       -->
 
-        <img style="width:102;object-fit: contain;margin: 0"
+      <img style="width:30%;object-fit: contain;margin: 0"
              src="{{site.baseurl}}{{page.page_assets}}{{item.button}}"/>
       </a>
     </div>
