--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ page_assets: /assets/images/landpage/
      <div style="position:absolute;z-index:8;width:40%;top:{{item.text-top-offset}};left:{{item.text-left-offset}}"
           id="text-overlay">
        <div>
-         <p style="font-size:0.7rem">{{item.text}}</p>
+         <p style="color:#eaeaea;font-size:0.7rem">{{item.text}}</p>
        </div>
-       <div style="position:absolute;z-index:9;width:40%;top:{{item.button-top-offset}};left:{{item.button-left-offset}}"
+       <div style="position:absolute;z-index:9;width:100%;top:{{item.button-top-offset}};left:{{item.button-left-offset}}"
             id="button-overlay">
          <a href="{{site.baseurl}}{{item.url}}" style="color:#eaeaea;">
         <!--
