--- a/index.html
+++ b/index.html
@@ -24,31 +24,28 @@ page_assets: /assets/images/landpage/
 -->
 
 <!-- FIXME -->
-<div style="background-color: ffffff;">
+<div style="background-color: ffffff;position:relative">
   <img style="width:100%;height:{{item.height}};object-fit: contain;margin: 0"
   src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
   {% for item in site.data.navigation.landpage %}
-   <div style="position:relative" id="bubbles">
-     <div style="position:relative;z-index:8;width:40%;height:{{item.height}};top:{{item.text-top-offset}};left:{{item.text-left-offset}}"
+     <div style="position:absolute;z-index:8;width:40%;height:{{item.height}};top:{{item.text-top-offset}};left:{{item.text-left-offset}}"
           id="text-overlay">
-       <div>
          <p style="color:#eaeaea;font-size:0.7rem">{{item.text}}</p>
-       </div>
-       <div style="position:absolute;z-index:9;width:100%;top:{{item.button-top-offset}};left:{{item.button-left-offset}}"
-            id="button-overlay">
-         <a href="{{site.baseurl}}{{item.url}}" style="color:#eaeaea;">
-        <!--
-        <div style="background-color: #1c488c;height:299px;width:595px;margin: 0 10px 10px 0;padding:10px;float:left;">
-          <span style="font-size:1.5em;font-family: 'Dancing Script', cursive;font-weight: bold;">Actualités</span>
-        </div>
-        -->
-
-        <img style="width:30%;object-fit: contain;margin: 0"
-               src="{{site.baseurl}}{{page.page_assets}}{{item.button}}"/>
-        </a>
-      </div>
      </div>
-  </div>
+     <div style="position:absolute;z-index:9;width:100%;top:{{item.button-top-offset}};left:{{item.button-left-offset}}"
+          id="button-overlay">
+       <a href="{{site.baseurl}}{{item.url}}" style="color:#eaeaea;">
+      <!--
+      <div style="background-color: #1c488c;height:299px;width:595px;margin: 0 10px 10px 0;padding:10px;float:left;">
+        <span style="font-size:1.5em;font-family: 'Dancing Script', cursive;font-weight: bold;">Actualités</span>
+      </div>
+      -->
+
+      <img style="width:30%;object-fit: contain;margin: 0"
+             src="{{site.baseurl}}{{page.page_assets}}{{item.button}}"/>
+      </a>
+    </div>
+
 {% endfor %}
 </div>
