--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ page_assets: /assets/images/landpage/
   src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
   {% for item in site.data.navigation.landpage %}
-     <div style="position:absolute;z-index:8;width:40%;height:{{item.height}};top:{{item.text-top-offset}};left:{{item.text-left-offset}}"
+     <div style="position:absolute;z-index:8;width:40%;top:{{item.text-top-offset}};left:{{item.text-left-offset}}"
           id="text-overlay">
          <p style="color:#eaeaea;font-size:0.7rem">{{item.text}}</p>
      </div>
