--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ page_assets: /assets/images/landpage/
 -->
 
 <!-- FIXME -->
-<div style="background-color: ffffff;position:relative">
-  <img style="width:100%;height:{{item.height}};object-fit: contain;margin: 0"
+<div style="position:relative;background-color: ffffff;">
+  <img style="width:100%;object-fit: contain;margin: 0"
   src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
   {% for item in site.data.navigation.landpage %}
