--- a/index.html
+++ b/index.html
@@ -34,17 +34,16 @@ page_assets: /assets/images/landpage/
             id="text-overlay">
            <p style="color:#eaeaea;font-size:0.7rem">{{item.text}}</p>
        </div>
-       <div style="position:absolute;z-index:9;width:40%;top:{{item.button-top-offset}};left:{{item.button-left-offset}}"
-            id="button-overlay">
-         <a href="{{site.baseurl}}{{item.url}}" style="color:#eaeaea;">
+       <div style="position:absolute;z-index:9;height:100;"  id="button-overlay">
+         <a href="{{site.baseurl}}{{item.url}}">
         <!--
         <div style="background-color: #1c488c;height:299px;width:595px;margin: 0 10px 10px 0;padding:10px;float:left;">
           <span style="font-size:1.5em;font-family: 'Dancing Script', cursive;font-weight: bold;">Actualités</span>
         </div>
         -->
 
-        <img style="width:30%;object-fit: contain;margin: 0"
-               src="{{site.baseurl}}{{page.page_assets}}{{item.button}}"/>
+        <!--<img style="width:30%;object-fit: contain;margin: 0"
+               src="{{site.baseurl}}{{page.page_assets}}{{item.button}}"/>-->
         </a>
       </div>
 
