--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ page_assets: /assets/images/landpage/
            <p style="color:#eaeaea;font-size:0.7rem">{{item.text}}</p>
        </div>
        <div style="position:absolute;z-index:9;height:100;"  id="button-overlay">
-         <a href="{{site.baseurl}}{{item.url}}">
+           <a  style="width:100%;height:100;border:none;background-color:transparent;outline:none" href="{{site.baseurl}}{{item.url}}">
         <!--
         <div style="background-color: #1c488c;height:299px;width:595px;margin: 0 10px 10px 0;padding:10px;float:left;">
           <span style="font-size:1.5em;font-family: 'Dancing Script', cursive;font-weight: bold;">Actualités</span>
