--- a/index.html
+++ b/index.html
@@ -34,18 +34,10 @@ page_assets: /assets/images/landpage/
             id="text-overlay">
            <p style="color:#eaeaea;font-size:0.7rem">{{item.text}}</p>
        </div>
-       <div style="position:absolute;z-index:9;height:100;"  id="button-overlay">
-           <a  style="width:100%;height:100;border:none;background-color:transparent;outline:none" href="{{site.baseurl}}{{item.url}}">
-        <!--
-        <div style="background-color: #1c488c;height:299px;width:595px;margin: 0 10px 10px 0;padding:10px;float:left;">
-          <span style="font-size:1.5em;font-family: 'Dancing Script', cursive;font-weight: bold;">Actualités</span>
-        </div>
-        -->
-
-        <!--<img style="width:30%;object-fit: contain;margin: 0"
-               src="{{site.baseurl}}{{page.page_assets}}{{item.button}}"/>-->
+        <a  style="border:none;background-color:transparent;outline:none" href="{{site.baseurl}}{{item.url}}">
+          <div style="position:absolute;z-index:9;width:40%;height:100;left:{{item.button-left-offset}}"
+          </div>
         </a>
-      </div>
 
       {% endfor %}
   </div>
