--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ page_assets: /assets/images/landpage/
             id="text-overlay">
            <p style="color:#eaeaea;font-size:0.7rem">{{item.text}}</p>
        </div>
-        <a  style="border:none;background-color:transparent;outline:none" href="{{site.baseurl}}{{item.url}}">
-          <div style="position:absolute;z-index:9;width:40%;height:100;left:{{item.button-left-offset}}"
+        <a href="{{site.baseurl}}{{item.url}}">
+          <div style="position:absolute;z-index:9;width:40%;height:100;left:{{item.button-left-offset}};border:none;background-color:red;outline:none"
           </div>
         </a>
 
