--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ page_assets: /assets/images/landpage/
            <p style="color:#eaeaea;font-size:0.7rem">{{item.text}}</p>
        </div>
         <a href="{{site.baseurl}}{{item.url}}">
-          <div style="position:absolute;z-index:9;width:50%;height:100;top:{{item.button-top-offset}};left:{{item.button-left-offset}};border:none;background-color:red;outline:none"
+          <div style="position:absolute;z-index:9;width:50%;height:100;top:{{item.button-top-offset}};left:{{item.button-left-offset}};border:none;background-color:transparent;outline:none"
             <p>&nbsp;</p>
           </div>
         </a>
