--- a/talks/index.html
+++ b/talks/index.html
@@ -3,7 +3,7 @@ layout: splash
 author_profile: false
 classes: wide
 header:
-  image: /assets/images/banner-1200-300.svg
+  image: /assets/images/landpage-header.png
   #overlay_image: /assets/images/banner-1200-300.png
   actions:
     - label: "Lire le blog"
