--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@ page_assets: /assets/images/landpage/
     <img style="width:100%;object-fit: contain;margin: 0"
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
+    <div>
+      <img src="{{site.baseurl}}{{page.page_assets}}/../bullet.svg"
+      <p style="color:#eaeaea;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
+      <a href="{{site.baseurl}}/blog/">
+        <div style="height:45;border:none;outline:none"
+          <p>Lire</p>
+          <img style="position:absolute;z-index:-1" src="{{site.baseurl}}{{page.page_assets}}/../button.svg"
+        </div>
+      </a>
+    </div>
+
     {% for item in site.data.navigation.landpage %}
        <div style="position:absolute;z-index:8;width:40%;top:{{item.text-top-offset}};left:{{item.text-left-offset}}"
             id="text-overlay">
