--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@ page_assets: /assets/images/landpage/
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
     <div>
-      <img src="{{site.baseurl}}{{page.page_assets}}/../bullet.svg"
-      <p style="color:#eaeaea;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
+      <img src="{{site.baseurl}}/assets/images/bullet.svg"
+      <p style="color:#eaeaff;font-size:1rem">Blog</p>
+      <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
       <a href="{{site.baseurl}}/blog/">
-        <div style="height:45;border:none;outline:none"
-          <p>Lire</p>
-          <img style="position:absolute;z-index:-1" src="{{site.baseurl}}{{page.page_assets}}/../button.svg"
+        <div style="position:absolute;z-index:-1"
+          <img style="height:45;border:none;outline:none" src="{{site.baseurl}}/assets/images/button.svg"
         </div>
-      </a>
+        <div style="position:absolute;z-index:9"
+          <p>Lire</p>
+        </div>
+    </a>
     </div>
 
     {% for item in site.data.navigation.landpage %}
