--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@ page_assets: /assets/images/landpage/
 
     <div>
       <img src="{{site.baseurl}}/assets/images/bullet.png"
-      <p style="color:#eaeaff;font-size:1rem;left-margin:1em">Blog</p>
+      <p style="color:#eaeaff;font-size:1rem;left-margin:3em">Blog</p>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
       <a href="{{site.baseurl}}/blog/">
-        <div style="position:absolute;z-index:-1"
+        <div style="z-index:-1"
           <img style="height:45;border:none;outline:none" src="{{site.baseurl}}/assets/images/button.png"
         </div>
-        <div style="position:absolute;z-index:9"
+        <div style="z-index:9"
           <p>Lire</p>
         </div>
     </a>
