--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ page_assets: /assets/images/landpage/
 
     <div>
       <img src="{{site.baseurl}}/assets/images/bullet.png"
-      <p style="color:#eaeaff;font-size:1rem;left-margin:3em">Blog</p>
+      <p style="color:#eaeaff;font-size:1rem;margin-left:3em">Blog</p>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
       <a href="{{site.baseurl}}/blog/">
         <div style="z-index:-1"
