--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ page_assets: /assets/images/landpage/
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
       <a href="{{site.baseurl}}/blog/">
         <div style="z-index:-1"
-          <img style="height:25;border:none;outline:none" src="{{site.baseurl}}/assets/images/button.png"
+          <img style="height:25;width:25;border:none;outline:none" src="{{site.baseurl}}/assets/images/button.png"
         </div>
         <div style="z-index:9"
           <p>Lire</p>
