--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@ page_assets: /assets/images/landpage/
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
     <div>
-      <img src="{{site.baseurl}}/assets/images/bullet.svg"
+      <img src="{{site.baseurl}}/assets/images/bullet.svg" />
       <p style="color:#8888ff;font-size:1rem;padding-left:3em">Blog</p>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
       <a href="{{site.baseurl}}/blog/">
         <div style="z-index:-1"
-          <img style="height:25;width:25;border:none;outline:none" src="{{site.baseurl}}/assets/images/button.png"
+          <img style="height:25;width:25;border:none;outline:none" src="{{site.baseurl}}/assets/images/button.png" />
         </div>
         <div style="z-index:9"
           <p>Lire</p>
