--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ page_assets: /assets/images/landpage/
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
     <div>
-      <img src="{{site.baseurl}}/assets/images/bullet.svg" />
-      <p style="color:#8888ff;font-size:1rem;padding-left:3em">Blog</p>
+      <img src="{{site.baseurl}}/assets/images/bullet.svg;float:left" />
+      <p style="color:#bbbbff;font-size:1rem;padding-left:3em">Blog</p>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
       <a href="{{site.baseurl}}/blog/">
         <div style="z-index:-1"
