--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ page_assets: /assets/images/landpage/
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
     <div>
-      <img src="{{site.baseurl}}/assets/images/bullet.svg;float:left" />
+      <img style="float:left;" src="{{site.baseurl}}/assets/images/bullet.svg" />
       <p style="color:#bbbbff;font-size:1rem;padding-left:3em">Blog</p>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
       <a href="{{site.baseurl}}/blog/">
