--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@ page_assets: /assets/images/landpage/
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
     <div>
-      <img style="float:left;" src="{{site.baseurl}}/assets/images/bullet.svg" />
-      <p style="color:#bbbbff;font-size:1rem;padding-left:3em">Blog</p>
+      <div style="display:flex;align-items:center;">
+        <img style="float:left;" src="{{site.baseurl}}/assets/images/bullet.svg" />
+        <p style="color:#bbeaff;font-size:1rem;padding-left:3em">Blog</p>
+      </div>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
       <a href="{{site.baseurl}}/blog/">
         <div style="z-index:-1"
