--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ page_assets: /assets/images/landpage/
     <div>
       <div style="display:flex;align-items:center;">
         <img style="float:left;" src="{{site.baseurl}}/assets/images/bullet.svg" />
-        <p style="font-family:HelveticaNeueLight,HelveticaNeue,Helvetica,Arial;color:#88ddff;font-size:1.6rem;padding-top:1.3em;padding-left:0.6em">Blog</p>        
+        <p style="font-family:HelveticaNeueLight,HelveticaNeue,Helvetica,Arial;color:#88ccee;font-size:1.6rem;padding-top:1.3em;padding-left:0.6em">Blog</p>        
       </div>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
       <a href="{{site.baseurl}}/blog/">
