--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ page_assets: /assets/images/landpage/
         <a href="{{site.baseurl}}/blog/">
           <div style="position:relative;left:0;top:0;z-index:8"
             <img style="height:45;width:250;border:none;outline:none"
-                  src="{{site.baseurl}}/assets/images/button.png" />
-          </div>
+                  src="{{site.baseurl}}/assets/images/button.svg" />
+          </div>s
         </a>
       </div>
     </div>
