--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@ page_assets: /assets/images/landpage/
           <p>Lire</p>
         </div>
         <a href="{{site.baseurl}}/blog/">
-          <div style="position:relative;left:0;top:0;z-index:8"
-            <img style="height:45;width:250;border:none;outline:none"
+          <div style="position:relative;left:0;top:0;z-index:8;height:45;width:250;"
+            <img style="border:none;outline:none"
                   src="{{site.baseurl}}/assets/images/button.svg" />
-          </div>s
+          </div>
         </a>
       </div>
     </div>
