--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ page_assets: /assets/images/landpage/
         </div>
         <a href="{{site.baseurl}}/blog/">
           <div style="position:relative;left:0;top:0;z-index:8;height:45;width:250;"
-            <img style="border:none;outline:none"
+            <img style="border:none;outline:none;"
                   src="{{site.baseurl}}/assets/images/button.svg" />
           </div>
         </a>
