--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@ page_assets: /assets/images/landpage/
       </div>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
       <div>
-        <div style="position:relative;left:0;top:0;z-index:9"
+        <div style="position:relative;left:0;top:0;z-index:9">
           <p>Lire</p>
         </div>
         <a href="{{site.baseurl}}/blog/">
-          <div style="position:relative;left:0;top:0;z-index:8;height:45;width:250;"
+          <div style="position:relative;left:0;top:0;z-index:8;height:45;width:250;">
             <img style="border:none;outline:none;"
                   src="{{site.baseurl}}/assets/images/button.svg" />
           </div>
