title and align

--- a/index.html
+++ b/index.html
@@ -29,11 +29,18 @@ page_assets: /assets/images/landpage/
     <img style="width:100%;object-fit: contain;margin: 0"
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
+    <div style="position:absolute;left:0;top:0;">
+      <span style="font-size:4em;font-family: 'Shrikhand', cursive;font-weight: bold;">Bullles de code</span>
+    </div>
+
+
     <div>
-      <div style="display:flex;align-items:center;">
+      <div style="display:flex;flex-direction:row;">
         <img style="float:left;" src="{{site.baseurl}}/assets/images/bullet.svg" />
-        <p style="font-family:Helvetica,Arial;font-strech:condensed;color:#bceaea;font-size:1.6rem;padding-top:1.4em;padding-left:0.5em">Blog</p>
-        <hr style="color:#bceaea;width:80%;"/>
+        <div style="display:flex;flex-direction:column;">
+          <p style="font-family:Helvetica,Arial;font-strech:condensed;color:#bceaea;font-size:1.6rem;padding-top:1.4em;padding-left:0.5em">Blog</p>
+          <hr style="color:#bceaea;width:90%;"/>
+        </div>
       </div>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
       <div>
