title and align

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@ page_assets: /assets/images/landpage/
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
     <div style="position:absolute;left:0;top:0;">
-      <span style="font-size:4em;font-family: 'Shrikhand', cursive;font-weight: bold;">Bullles de code</span>
+      <span style="font-size:3em;font-family: 'Shrikhand', cursive;font-weight: bold;">Bullles de code</span>
     </div>
 
 
     <div>
       <div style="display:flex;flex-direction:row;">
         <img style="float:left;" src="{{site.baseurl}}/assets/images/bullet.svg" />
-        <div style="display:flex;flex-direction:column;">
-          <p style="font-family:Helvetica,Arial;font-strech:condensed;color:#bceaea;font-size:1.6rem;padding-top:1.4em;padding-left:0.5em">Blog</p>
+        <div style="display:flex;flex-direction:column;align-items:flex-start;">
+          <p style="font-family:Helvetica,Arial;font-strech:condensed;color:#bceaea;font-size:1.6rem;padding-left:0.5em">Blog</p>
           <hr style="color:#bceaea;width:90%;"/>
         </div>
       </div>
