title and align

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ page_assets: /assets/images/landpage/
     <img style="width:100%;object-fit: contain;margin: 0"
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
-    <div style="position:absolute;left:0;top:0;">
-      <span style="font-size:3em;font-family: 'Shrikhand', cursive;font-weight: bold;">Bullles de code</span>
+    <div style="position:absolute;left:30;top:20;">
+      <span style="font-size:3em;font-family: 'Shrikhand', cursive;">Bullles de code</span>
     </div>
 
 
