title and align

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ page_assets: /assets/images/landpage/
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
     <div style="position:absolute;left:30;top:2;">
-      <span style="font-size:3em;color:#bcea00;font-family: 'Shrikhand', cursive;">Bullles de code</span>
+      <span style="font-size:3em;color:#bcea00;font-family: 'Coiny', cursive;">Bulles de code</span>
     </div>
 
 
