--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ page_assets: /assets/images/landpage/
     <img style="width:100%;object-fit: contain;margin: 0"
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
-    <div style="position:absolute;left:30;top:2;">
+    <div style="position:absolute;left:3;top:2;">
       <span style="font-size:3em;color:#bcea00;font-family: 'Coiny', cursive;">Bulles de code</span>
     </div>
 
@@ -37,7 +37,7 @@ page_assets: /assets/images/landpage/
     <div>
       <div style="display:flex;flex-direction:row;">
         <img style="float:left;" src="{{site.baseurl}}/assets/images/bullet.svg" />
-        <div style="display:flex;flex-direction:column;align-items:flex-start;">
+        <div>
           <p style="font-family:Helvetica,Arial;font-strech:condensed;color:#bceaea;font-size:1.6rem;padding-left:0.5em">Blog</p>
           <hr style="color:#bceaea;width:90%;"/>
         </div>
