title and align

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@ page_assets: /assets/images/landpage/
       <div style="display:flex;flex-direction:row;">
         <img style="float:left;" src="{{site.baseurl}}/assets/images/bullet.svg" />
         <div>
-          <p style="font-family:Helvetica,Arial;font-strech:condensed;color:#bceaea;font-size:1.6rem;padding-left:0.5em">Blog</p>
-          <hr style="color:#bceaea;width:90%;"/>
+          <p style="font-family:Coiny,cursive;color:#bceaea;font-size:1.6rem;padding-left:0.5em">
+            Blog
+            <hr style="color:#bceaea;width:90%;"/>
+          </p>
+
         </div>
       </div>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
