title and align

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ page_assets: /assets/images/landpage/
       <div style="display:flex;flex-direction:row;">
         <img style="float:left;" src="{{site.baseurl}}/assets/images/bullet.svg" />
         <div>
-          <p style="font-family:Coiny,cursive;color:#bceaea;font-size:1.6rem;padding-left:0.5em">
+          <p style="font-family:Shrikhand,cursive;color:#bceaea;font-size:1.6rem;padding-left:0.5em">
             Blog
             <hr style="color:#bceaea;width:90%;"/>
           </p>
