--- a/index.html
+++ b/index.html
@@ -30,14 +30,11 @@ page_assets: /assets/images/landpage/
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
     <div>
-      <div style="display:flex;align-items:baseline;flex-direction:row;">
+      <div style="display:flex;align-items:center;flex-direction:row;">
         <img style="float:left;" src="{{site.baseurl}}/assets/images/bullet.svg" />
         <div>
-          <p style="font-family:Shrikhand,cursive;color:#aceada;font-size:1.6rem;padding-left:0.5em">
-            Blog
-            <hr style="color:#bceaea;width:90%;"/>
-          </p>
-
+          <p style="font-family:Shrikhand,cursive;color:#aceada;font-size:1.6rem;padding-left:0.5em">Blog</p>
+          <hr style="color:#bceaea;width:90%;"/>
         </div>
       </div>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
