--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ page_assets: /assets/images/landpage/
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
     <div>
-      <div>
+      <div style="height:80;">
         <img style="float:left;" src="{{site.baseurl}}/assets/images/bullet.svg" />
         <div>
-          <p style="font-family:Shrikhand,cursive;color:#9cdaca;font-size:1.6rem;padding-left:0.5em">Blog</p>
+          <p style="font-family:Shrikhand,cursive;color:#9ccaba;font-size:1.6rem;padding-left:1em">Blog</p>
           <hr style="color:#bceaea;width:90%;"/>
         </div>
       </div>
