--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@ page_assets: /assets/images/landpage/
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
     <div>
-      <div style="height:80;">
-        <img style="float:left;" src="{{site.baseurl}}/assets/images/bullet.svg" />
-        <div>
-          <p style="font-family:Shrikhand,cursive;color:#9ccaba;font-size:1.6rem;padding-left:1em">Blog</p>
-          <hr style="color:#bceaea;width:90%;"/>
-        </div>
+      <div style="float:left;height:80;">
+        <img src="{{site.baseurl}}/assets/images/bullet.svg" />
+      </div>
+      <div style="margin-left:1em;">
+        <p style="font-family:Shrikhand,cursive;color:#9ccaba;font-size:1.6rem;">Blog</p>
+        <hr style="color:#bceaea;width:90%;"/>
+      </div>
       </div>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
       <div>
