title and align

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ page_assets: /assets/images/landpage/
       <div style="float:left;height:80;">
         <img src="{{site.baseurl}}/assets/images/bullet.svg" />
       </div>
-      <div style="margin-left:1em;">
+      <div style="margin-left:80;">
         <p style="font-family:Shrikhand,cursive;color:#9ccaba;font-size:1.6rem;">Blog</p>
         <hr style="color:#bceaea;width:90%;"/>
       </div>
