--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ page_assets: /assets/images/landpage/
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
     <div>
-      <div style="float:left;height:100;">
+      <div style="float:left;height:100;margin-right:10;">
         <img src="{{site.baseurl}}/assets/images/bullet.svg" />
       </div>
-      <div style="margin-left:90;">
+      <div>
         <p style="font-family:Shrikhand,cursive;color:#9ccaba;font-size:1.6rem;">Blog</p>
         <hr style="color:#bceaea;width:90%;"/>
       </div>
