--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ page_assets: /assets/images/landpage/
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
     <div>
-      <div style="float:left;height:100;margin-right:10;">
+      <div style="float:left;height:100;margin-right:1em;">
         <img src="{{site.baseurl}}/assets/images/bullet.svg" />
       </div>
       <div>
