title and align

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ page_assets: /assets/images/landpage/
       </div>
       </div>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
-      <div>
+      <div style="position:relative;">
         <a href="{{site.baseurl}}/blog/">
-          <div style="position:relative;left:0;top:0;z-index:8;height:50;width:140;">
-            <img style="border:none;outline:none;"
+          <div style="position:absolute;left:0;top:0;z-index:8;">
+            <img style="border:none;outline:none;height:50;width:140;"
                   src="{{site.baseurl}}/assets/images/button.svg" />
           </div>
         </a>
-        <div style="position:relative;left:50;top:-90;z-index:9">
+        <div style="position:absolute;left:50;top:0;z-index:9">
           <p>Lire</p>
         </div>
       </div>
