title and align

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ page_assets: /assets/images/landpage/
         <img src="{{site.baseurl}}/assets/images/bullet.svg" />
       </div>
       <div>
-        <p style="font-family:Shrikhand,cursive;color:#9ccaba;font-size:1.6rem;">Blog</p>
+        <span style="font-family:Shrikhand,cursive;color:#9ccaba;font-size:1.6rem;">Blog</span>
         <hr style="color:#bceaea;width:90%;"/>
       </div>
       </div>
