title and align

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ page_assets: /assets/images/landpage/
       <div style="position:relative;">
         <div style="position:absolute;left:0;top:0;z-index:8;">
           <a href="{{site.baseurl}}/blog/">
-            <img style="border:none;outline:none;height:50;width:140;"
+            <img style="border:none;outline:none;"
                 src="{{site.baseurl}}/assets/images/button.svg" />
           </a>
         </div>
