--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@ page_assets: /assets/images/landpage/
       <div style="float:left;height:100;margin-right:1em;">
         <img src="{{site.baseurl}}/assets/images/bullet.svg" />
       </div>
-      <div>
+      <div style="border-bottom: 5px solid:#bceaea;">
         <span style="font-family:Shrikhand,cursive;color:#9ccaba;font-size:1.6rem;">Blog</span>
-        <hr style="color:#bceaea;width:90%;"/>
       </div>
       </div>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
