title and align

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ page_assets: /assets/images/landpage/
       </div>
       </div>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
-      <div style="position:relative;">
+      <div style="position:relative;height:200px">
         <div style="position:absolute;left:0;top:0;z-index:8;">
           <a href="{{site.baseurl}}/blog/">
             <img style="border:none;outline:none;"
