title and align

--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@ page_assets: /assets/images/landpage/
     src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
 
     <div>
-      <div style="float:left;height:100;margin-right:1em;">
+      <div style="float:left;margin-right:1em;">
         <img src="{{site.baseurl}}/assets/images/bullet.svg" />
       </div>
-      <div style="border-bottom: 5px solid:#bceaea;">
+      <div style="border-bottom: 5px solid #bceaea;">
         <span style="font-family:Shrikhand,cursive;color:#9ccaba;font-size:1.6rem;">Blog</span>
-      </div>
       </div>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
       <div style="position:relative;height:200px">
