title and align

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ page_assets: /assets/images/landpage/
       <div style="float:left;margin-right:1em;">
         <img src="{{site.baseurl}}/assets/images/bullet.svg" />
       </div>
-      <div style="border-bottom: 5px solid #bceaea;">
-        <span style="font-family:Shrikhand,cursive;color:#9ccaba;font-size:1.6rem;">Blog</span>
+      <div>
+        <p style="border-bottom: 1px solid #bceaea;font-family:Shrikhand,cursive;color:#9ccaba;font-size:1.6rem;">Blog</p>
       </div>
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
       <div style="position:relative;height:200px">
