title and align

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ page_assets: /assets/images/landpage/
                 src="{{site.baseurl}}/assets/images/button.svg" />
           </a>
         </div>
-        <div style="position:absolute;left:100;top:10;z-index:9">
-          <p>Lire</p>
+        <div style="position:absolute;left:0;top:0;z-index:9">
+          <p style="margin-left:5em;margin-top:1em;>Lire</p>
         </div>
       </div>
     </div>
