--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ page_assets: /assets/images/landpage/
           </a>
         </div>
         <div style="position:absolute;left:0;top:0;z-index:9">
-          <p style="margin-left:5em;margin-top:1em;>Lire</p>
+          <p style="margin-left:5em;margin-top:1em;">Lire</p>
         </div>
       </div>
     </div>
