--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@ page_assets: /assets/images/landpage/
       </div>
     </div>
 
+    <div style="display:flex;justify-content:center;">
+      <img src="{{site.baseurl}}/assets/images/section-blog.svg" />
+    </div>
+
     {% for item in site.data.navigation.landpage %}
        <div style="position:absolute;z-index:8;width:40%;top:{{item.text-top-offset}};left:{{item.text-left-offset}}"
             id="text-overlay">
