--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ page_assets: /assets/images/landpage/
       </div>
     </div>
 
-    <div style="display:flex;justify-content:center;">
+    <div style="display:flex;justify-content:center;align-items:center;width:100%;">
       <img src="{{site.baseurl}}/assets/images/section-blog.svg" />
     </div>
 
