--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ page_assets: /assets/images/landpage/
     </div>
 
     <div style="display:flex;justify-content:center;align-items:center;width:100%;">
-      <img src="{{site.baseurl}}/assets/images/section-blog.svg" />
+      <img width="240px"height="100px" src="{{site.baseurl}}/assets/images/section-blog.svg" />
     </div>
 
     {% for item in site.data.navigation.landpage %}
