--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@ page_assets: /assets/images/landpage/
       </div>
     </div>
 
-    <div style="display:flex;justify-content:center;align-items:center;width:100%;">
-      <img width="8rem" src="{{site.baseurl}}/assets/images/section-blog.svg" />
+    <div style="display:flex;">
+      <img width="480px" height="200px" src="{{site.baseurl}}/assets/images/section-blog.svg" />
+      <p>Test</p>
     </div>
 
     {% for item in site.data.navigation.landpage %}
