--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ page_assets: /assets/images/landpage/
       </div>
     </div>
 
-    <div style="display:flex;">
-      <img width="960px" height="400px" src="{{site.baseurl}}/assets/images/section-blog.svg" />
+    <div style="display:flex;width:8rem;">
+      <p><img src="{{site.baseurl}}/assets/images/section-blog.svg" /></p>
       <p>Test</p>
     </div>
 
