--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@ page_assets: /assets/images/landpage/
       </div>
     </div>
 
-    <div style="display:flex;width:40rem;">
-      <p><img src="{{site.baseurl}}/assets/images/section-blog.svg" /></p>
+    <div style="display:flex;">
+      <div style="width:40rem;">
+          <p><img src="{{site.baseurl}}/assets/images/section-blog.svg" /></p>
+      </div>
       <p>Test</p>
     </div>
 
