--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ page_assets: /assets/images/landpage/
       </div>
     </div>
 
-    <div style="display:flex;">
+    <div>
       <div style="width:40rem;">
           <p><img src="{{site.baseurl}}/assets/images/section-blog.svg" /></p>
       </div>
