--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@ page_assets: /assets/images/landpage/
       <p>Test</p>
     </div>
 
+    <div>
+      <div style="width:20rem;">
+          <p><img src="{{site.baseurl}}/assets/images/section-photos.svg" /></p>
+      </div>
+      <p>Test</p>
+    </div>
+
     {% for item in site.data.navigation.landpage %}
        <div style="position:absolute;z-index:8;width:40%;top:{{item.text-top-offset}};left:{{item.text-left-offset}}"
             id="text-overlay">
