--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ page_assets: /assets/images/landpage/
 <div class="div_background" style="background-color: ffffff;width:1200;height:2680;">
   <div style="position:relative">
     <img style="width:100%;object-fit: contain;margin: 0"
-    src="{{site.baseurl}}{{page.page_assets}}landpage.svg"/>
+    src="{{site.baseurl}}{{page.page_assets}}landpage.png"/>
 
     <div>
       <div style="float:left;margin-right:1em;">
