--- a/index.html
+++ b/index.html
@@ -30,38 +30,18 @@ page_assets: /assets/images/landpage/
     src="{{site.baseurl}}{{page.page_assets}}landpage.png"/>
 
     <div>
-      <div style="float:left;margin-right:1em;">
-        <img src="{{site.baseurl}}/assets/images/bullet.svg" />
-      </div>
-      <div style="padding-left:4em;width:16em;">
-        <p style="border-bottom: 1px solid #bceaea;font-family:Shrikhand,cursive;color:#9ccaba;font-size:1.4rem;">Blog</p>
-      </div>
+      <p style="border-bottom: 1px solid #bceaea;font-family:Shrikhand,cursive;color:#9ccaba;font-size:1.4rem;">Blog</p>
+
       <p style="color:#eaeaff;font-size:0.7rem">Industrialisation Machine Learning a Voxxed Luxembourg</p>
-      <div style="position:relative;height:200px">
-        <div style="position:absolute;left:0;top:0;z-index:8;">
-          <a href="{{site.baseurl}}/blog/">
-            <img style="border:none;outline:none;"
-                src="{{site.baseurl}}/assets/images/button.svg" />
-          </a>
-        </div>
-        <div style="position:absolute;left:0;top:0;z-index:9">
-          <p style="margin-left:8em;margin-top:0.8em;font-family:Shrikhand,cursive;color:#9ccaba;font-size:1rem;">Lire</p>
-        </div>
-      </div>
+
+      <p style="margin-left:8em;margin-top:0.8em;font-family:Shrikhand,cursive;color:#9ccaba;font-size:1rem;">Lire</p>
+
     </div>
 
 
     {% for item in site.data.navigation.landpage %}
-       <div style="position:absolute;z-index:8;width:40%;top:{{item.text-top-offset}};left:{{item.text-left-offset}}"
-            id="text-overlay">
-           <p style="color:#eaeaea;font-size:0.7rem">{{item.text}}</p>
-       </div>
-        <a href="{{site.baseurl}}{{item.url}}">
-          <div style="position:absolute;z-index:9;width:50%;height:100;top:{{item.button-top-offset}};left:{{item.button-left-offset}};border:none;background-color:transparent;outline:none"
-            <p>&nbsp;</p>
-          </div>
-        </a>
+           <p style="color:#eaeaea;font-size:0.7rem">test {{item.text}}</p>
 
-      {% endfor %}
+    {% endfor %}
   </div>
 </div>
