--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ page_assets: /assets/images/landpage/
 
   <div>
     {% for item in site.data.navigation.landpage %}
-      <p style="font-family:Shrikhand,cursive;color:#eaeaea;font-size:1.4rem;">test {{item.title}}</p>
-      <p style="color:#eaeaea;font-size:0.7rem">test {{item.text}}</p>
+      <p style="font-family:Shrikhand,cursive;color:#eaeaea;font-size:1.4rem;">{{item.title}}</p>
+      <p style="color:#eaeaea;font-size:0.7rem">{{item.text}}</p>
       <a  href="{{item.url}}">
         <p style="margin-left:8em;margin-top:0.8em;font-family:Shrikhand,cursive;color:#9ccaba;font-size:1rem;">Lire</p>
       </a>
