--- a/index.html
+++ b/index.html
@@ -32,13 +32,17 @@ page_assets: /assets/images/landpage/
 
   <div>
     {% for item in site.data.navigation.landpage %}
-      <p style="font-family:Shrikhand,cursive;color:#eaeaea;font-size:1.2rem;">{{item.title}}</p>
+      <h2>{{item.title}}</h2>
       {% for featured in item.featured %}
         <p style="color:#eaeaea;font-size:0.7rem">🔖 {{featured.text}}</p>
       {% endfor %}
       <a  href="{{item.url}}">
+        <!--
         <p style="margin-left:8em;margin-top:0.8em;font-family:Shrikhand,cursive;color:#9ccaba;font-size:1rem;">Lire</p>
+        -->
+        <button class="btn--info">Lire</button>
       </a>
+
     {% endfor %}
   </div>
 </div>
