--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@ page_assets: /assets/images/landpage/
         -->
         <button class="btn--info">Lire</button>
       </a>
+      <a href="{{ item.url }}" class="btn btn--light-outline btn--large btn--info">{{ item.btn }}</a>
+
 
     {% endfor %}
   </div>
