--- a/index.html
+++ b/index.html
@@ -32,17 +32,12 @@ page_assets: /assets/images/landpage/
 
   <div>
     {% for item in site.data.navigation.landpage %}
-      <h2>{{item.title}}</h2>
+      <header><h2>{{item.title}}</h2></header>
       {% for featured in item.featured %}
         <p style="color:#eaeaea;font-size:0.7rem">🔖 {{featured.text}}</p>
       {% endfor %}
-      <a  href="{{item.url}}">
-        <!--
-        <p style="margin-left:8em;margin-top:0.8em;font-family:Shrikhand,cursive;color:#9ccaba;font-size:1rem;">Lire</p>
-        -->
-        <button class="btn--info">Lire</button>
-      </a>
-      <a href="{{ item.url }}" class="btn btn--light-outline btn--large btn--info">{{ item.btn }}</a>
+
+      <a href="{{ item.url }}" class="btn btn--no-outline btn--medium btn--info">{{ item.btn }}</a>
 
 
     {% endfor %}
