--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@ page_assets: /assets/images/landpage/
   <div>
     {% for item in site.data.navigation.landpage %}
       <header><h2>{{item.title}}</h2></header>
+      <div style="background-color="282828";"
       {% for featured in item.featured %}
         <p style="color:#eaeaea;font-size:0.7rem">🔖 {{featured.text}}</p>
       {% endfor %}
+      </div>
 
       <a href="{{ item.url }}" class="btn btn--no-outline btn--medium btn--info">{{ item.btn }}</a>
 
