--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ page_assets: /assets/images/landpage/
   <div>
     {% for item in site.data.navigation.landpage %}
       <header><h2>{{item.title}}</h2></header>
-      <div style="background-color:#282828;">
+      <div style="background-color:#282828;padding:1rem;">
         <p style="color:#eaeaea;font-size:1rem">{{item.description}}</p>
 
         {% for featured in item.featured %}
