--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@ page_assets: /assets/images/landpage/
   <div>
     {% for item in site.data.navigation.landpage %}
       <header><h2>{{item.title}}</h2></header>
+
       <div style="background-color:#282828;padding:1rem;">
-        <p style="color:#eaeaea;font-size:1rem;padding:0;">{{item.description}}</p>
+        {% if item.description %}
+          <p style="color:#eaeaea;font-size:1rem;padding:0;">{{item.description}}</p>
+        {% endif %}
         {% if item.featured and item.featured.size > 0 %}
           {% for featured in item.featured %}
             <p style="color:#eaeaea;font-size:0.7rem;padding:0;">🔖 {{featured.text}}</p>
