--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@ page_assets: /assets/images/landpage/
       {% endif %}
 
       <div style="float:right;margin-bottom:2rem;">
-      <a href="{{ item.url }}" class="btn btn--no-outline btn--medium btn--info">
-        <!-- {{ item.btn }} -->
-        <img style="height:30;"  src="/assets/images/landpage/button.png" />
-      </a>
+        <a href="{{ item.url }}" class="btn btn--no-outline btn--medium">
+          <!-- {{ item.btn }}  btn--info-->
+          <img style="height:30;"  src="/assets/images/landpage/button.png" />
+        </a>
+      </div>
+      <div style="clear:both;">
       </div>
 
 
