--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ page_assets: /assets/images/landpage/
       {% endif %}
 
       <div style="float:right;margin-bottom:2rem;">
-        <a href="{{ item.url }}" class="btn btn--no-outline btn--medium">
-          <!-- {{ item.btn }}  btn--info-->
+        <a href="{{ item.url }}" >
+          <!-- {{ item.btn }}  class="btn btn--no-outline btn--medium btn--info" --> 
           <img style="height:30;"  src="/assets/images/landpage/button.png" />
         </a>
       </div>
