--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ page_assets: /assets/images/landpage/
 
       <div style="float:right;margin-bottom:2rem;">
         <a href="{{ item.url }}" >
-          <!-- {{ item.btn }}  class="btn btn--no-outline btn--medium btn--info" --> 
-          <img style="height:30;"  src="/assets/images/landpage/button.png" />
+          <!-- {{ item.btn }}  class="btn btn--no-outline btn--medium btn--info" -->
+          <img style="height:1rem;"  src="/assets/images/landpage/button.png" />
         </a>
       </div>
       <div style="clear:both;">
